重构 PhoneBaseApplicationPage 添加 BaseUserControl 修复 ResultReceive 上的一个Bug 添加开源授权协议文件(Microsoft Public License (Ms-PL))

--- a/Tup.ResultPage/Tup.ResultPage.csproj
+++ b/Tup.ResultPage/Tup.ResultPage.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Utils\ArrayUtil.cs" />
     <Compile Include="Utils\ThrowHelper.cs" />
     <Compile Include="Utils\UserDataServices.cs" />
+    <Compile Include="Utils\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
